# swr-analyzer

./: Cargo.toml  LICENSE  default.nix  flake.nix
src/: main.rs
src/protocol/: commands.rs  dummy.rs  error.rs  foxdelta.rs  hid.rs  libusb.rs  mod.rs
src/ui/: controls.rs  graph.rs  log.rs  mod.rs  relm.rs  swr_worker.rs  ui.glade  viewmodel.rs
src/ui/graph/: color_binding.rs  element.rs
src/ui/relm/: controls.rs  graph.rs
src/ui/util/: mod.rs
udev/: 99-swr-analyzer.rules
