[package]
name = "swr-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
thiserror = "1.0.59"
log = "0.4.21"
plotters = "0.3.5"
plotters-cairo = "0.5.0"
gtk = "0.18.1"
chrono = "0.4.38"
futures = "0.3.30"
async-channel = "2.3.1"
async-oneshot = "0.5.9"
pin-project = "1.1.5"
