[package]
name = "swr-analyzer"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
thiserror = "1.0.61"
log = "0.4.21"
chrono = "0.4.38"
relm4 = "0.8.1"
gtk4 = "0.8.2"
rand = "0.8.5"
plotters-cairo = "0.6.0"
plotters = "0.3.6"
